<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/tituloMain"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGlide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/textoBotonGlide" />

        <Button
            android:id="@+id/btnUCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/textoBotonUCrop" />

        <Button
            android:id="@+id/btnGpuImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoBotonGpuImage" />

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>