<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:fitsSystemWindows="true"
        tools:context=".GlideActivity">


    <Button
        android:id="@+id/btnSelectImageGlide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/textoGlideSeleccionar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoGlideOriginal"
        android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewOriginal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="Imagen original seleccionada por el usuario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textoGlideTransformado"
        android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewTransformed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="Imagen transformada con Glide"/>

    </LinearLayout>

